Colour contrast fix for link in credits footer

--- a/src/_0_styles/custom-styles.scss
+++ b/src/_0_styles/custom-styles.scss
@@ -168,3 +168,13 @@ p.tagline { padding: 15px 20px; margin: 0; }
 		}
 	}
 }
+
+.creds {
+	a {
+		color: brand(6);
+		text-decoration: underline;
+		&:hover, &:focus {
+			text-decoration: none;
+		}
+	}
+}
